@@ -1,6 +1,6 @@
 /*******************************************************************************
  * Copyright (c) 2000, 2004 IBM Corporation and others.
- * All rights reserved. This program and the accompanying materials
+ * All rights reserved. This program and the accompanying materials 
  * are made available under the terms of the Common Public License v1.0
  * which accompanies this distribution, and is available at
  * http://www.eclipse.org/legal/cpl-v10.html
@@ -8,34 +8,33 @@
  * Contributors:
  *     IBM Corporation - initial API and implementation
  *******************************************************************************/
-
-package org.eclipse.cdt.internal.ui.cview;
+package org.eclipse.cdt.internal.ui.browser.cbrowsing;
 
 import org.eclipse.cdt.internal.ui.actions.AbstractToggleLinkingAction;
 
 /**
- * This action toggles whether this navigator links its selection to the active
+ * This action toggles whether this package explorer links its selection to the active
  * editor.
  * 
- * @since 2.0
+ * @since 2.1
  */
 public class ToggleLinkingAction extends AbstractToggleLinkingAction {
 	
-    CView fCView;
-    
+	CBrowsingPart fCBrowsingPart;
+	
 	/**
 	 * Constructs a new action.
 	 */
-	public ToggleLinkingAction(CView cView) {
-		fCView = cView;
-		setChecked(cView.isLinkingEnabled());
+	public ToggleLinkingAction(CBrowsingPart part) {
+		setChecked(part.isLinkingEnabled());
+		fCBrowsingPart= part;
 	}
 
 	/**
 	 * Runs the action.
 	 */
 	public void run() {
-	    fCView.setLinkingEnabled(isChecked());
+	    fCBrowsingPart.setLinkingEnabled(isChecked());
 	}
 
 }
